fully styled and clean code

--- a/NodeAppTut/views/contact.html
+++ b/NodeAppTut/views/contact.html
@@ -1,58 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contacts</title>
+        <link rel="stylesheet" href="/css/contact.css">
+    </head>
 
-form{
-text-align:left;
-}
 
-fieldset {
-  background-color: white;
-  margin:0 auto;
-  float: center;
-  border-color: orange;
-  width:700px;
-  height:400px;
-}
-
-body{
-    background-image: url('https://media.istockphoto.com/id/1398473177/photo/questionnaire-with-checkboxes-filling-survey-form-online-answer-questions.jpg?s=2048x2048&w=is&k=20&c=vpGAk3uTMEQGBt13uXf88wFqGiy69Kc6qGV0gRkdsJw=');
-}
-
-h1{
-color:orange;
-text-align:center
-}
-
-p{
-text-align:center
-}
-
-input{
-  margin: 5px;
-  width:650px;
-}
-
-#dat
-{
-width:320px
-}
-
-#sub
-{
-background-color:Orange;
-color:white;
-border-color: antiquewhite;
-font-weight: bold;
-height:50px;
-text-align:center
-}
-
-</style>
-</head>
 <body>
-
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a href="/shop">Shop</a:href></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a class="active" href="/contactus">Contacts</a></li>
+            </ul>
+        </nav>
+    </header>
 <form action="#" method ="POST" onsubmit="onsignup(event)">
     <fieldset>
     <h1>Book a call</h1>
