--- a/NodeAppTut/views/shop.html
+++ b/NodeAppTut/views/shop.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/shop">Shop</a:href></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
-                <li><a href="/contactus">Contacts</a>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a class="active" href="/shop">Shop</a:href></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/contactus">Contacts</a></li>
             </ul>
         </nav>
     </header>
