--- a/NodeAppTut/views/404.html
+++ b/NodeAppTut/views/404.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found!</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
+    <header class="main-header">
+        <nav class="main-header__nav">
+            <ul class="main-header__item-list">
+                <li class="main-header__item"><a href="/shop">Shop</a:href></li>
+                <li class="main-header__item"><a class="active" href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/contactus">Contacts</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Page Not Found!</h1>
 </body>
 </html>
