--- a/NodeAppTut/views/404.html
+++ b/NodeAppTut/views/404.html
@@ -13,7 +13,7 @@
         <nav class="main-header__nav">
             <ul class="main-header__item-list">
                 <li class="main-header__item"><a href="/shop">Shop</a:href></li>
-                <li class="main-header__item"><a class="active" href="/admin/add-product">Add Product</a></li>
+                <li class="main-header__item"><a href="/admin/add-product">Add Product</a></li>
                 <li class="main-header__item"><a href="/contactus">Contacts</a></li>
             </ul>
         </nav>
