--- a/Dynamic Routes/00-starting-setup/views/shop/cart.ejs
+++ b/Dynamic Routes/00-starting-setup/views/shop/cart.ejs
@@ -3,4 +3,9 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+
+        <main>
+            
+        </main>
+
         <%- include('../includes/end.ejs') %>
