--- a/Dynamic Routes/00-starting-setup/views/shop/product-list.ejs
+++ b/Dynamic Routes/00-starting-setup/views/shop/product-list.ejs
@@ -27,7 +27,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/products/<%= product.id %>" class="btn">Details</a>
+                                    <a href="/products/<%= product.id %>" class="btn">Details</a>
                                     <form action="/cart" method="POST">
                                         <button class="btn" type="submit">Add to Cart</button>
                                         <input type="hidden" name="productId" value="<%= product.id%>">
